Fix top-level responsiveness and improve flex wrap points

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -125,7 +125,8 @@ textarea {
 body {
  font-size: 13px;
  font-family: Arial,sans-serif;
- width: 1200px;
+ max-width: 1200px;
+ min-width: 400px;
  margin: 10px auto;
  padding:0;
  background-color: #999999;
@@ -142,19 +143,20 @@ body {
 main {
   background-color: #ffffff;
   display: flex;
+  flex-wrap: wrap;
 }
 
 #sidebar {
  padding: var(--layout-spacing);
- font-size:90%;
- flex: 1 1 100px;
+ font-size:0.9em;
+ flex: 1 0 210px;
 }
 #content {
  padding: var(--layout-spacing);
  border-right: #111111;
  position: relative;
  color:#111111;
- flex: 4 1 400px;
+ flex: 5 1 400px;
 }
 
 .endorsement {
@@ -590,7 +592,7 @@ thead:last-child tr:last-child th:first-child, tbody:last-child tr:last-child td
 }
 
 .addonListing .actions {
-  flex: 1 1 100px;
+  flex: 1 0 100px;
 }
 
 .addonListing h3 {
@@ -630,6 +632,7 @@ header {
 }
 .searchWrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .searchOptions, .searchResults {
@@ -637,7 +640,7 @@ header {
 }
 
 .searchOptions {
-  flex: 1 1 150px;
+  flex: 1 0 180px;
   margin-right: var(--content-spacing);
 }
 
